@@ -1,0 +1,1 @@
+/usr/share/automake-1.10/COPYING
