@@ -1,7 +1,9 @@
 ## Process this file with automake to produce Makefile.in
 ## Created by Anjuta
 
-SUBDIRS = src po
+SUBDIRS = src po data
+
+ACLOCAL_AMFLAGS = -I config/m4
 
 gtk_ctafconfdocdir = ${prefix}/doc/gtk-ctafconf
 gtk_ctafconfdoc_DATA = \
@@ -12,16 +14,13 @@ gtk_ctafconfdoc_DATA = \
 	INSTALL\
 	NEWS
 
-ACLOCAL_AMFLAGS = -I config/m4
-
-EXTRA_DIST = $(gtk_ctafconfdoc_DATA) \
-	     config/m4
+EXTRA_DIST = $(gtk_ctafconfdoc_DATA)
 
 # Copy all the spec files. Of cource, only one is actually used.
-dist-hook:
-	for specfile in *.spec; do \
-		if test -f $$specfile; then \
-			cp -p $$specfile $(distdir); \
-		fi \
-	done
+# dist-hook:
+# 	for specfile in *.spec; do \
+# 		if test -f $$specfile; then \
+# 			cp -p $$specfile $(distdir); \
+# 		fi \
+# 	done
 
