@@ -1,0 +1,34 @@
+##
+## Makefile.am
+## Login : <ctaf@wei>
+## Started on  Wed Mar  5 11:38:03 2008 Cedric GESTES
+## $Id$
+##
+## Author(s):
+##  - Cedric GESTES <gestes@aldebaran-robotics.com>
+##
+## Copyright (C) 2008 Cedric GESTES
+## This program is free software; you can redistribute it and/or modify
+## it under the terms of the GNU General Public License as published by
+## the Free Software Foundation; either version 3 of the License, or
+## (at your option) any later version.
+##
+## This program is distributed in the hope that it will be useful,
+## but WITHOUT ANY WARRANTY; without even the implied warranty of
+## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+## GNU General Public License for more details.
+##
+## You should have received a copy of the GNU General Public License
+## along with this program; if not, write to the Free Software
+## Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
+##
+
+## extra files
+EXTRA_DIST = $(ctafconf_DATA)
+
+ctafconfdir = ${GTK_CTAFCONF_DATADIR}
+
+ctafconf_DATA = main.tpl \
+		regexp.tpl
+
+
